<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inner_tab_layout"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_logo_symbol"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/overview_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/overview_icon"
        android:layout_width="@dimen/dim_size_tab_icon"
        android:layout_height="@dimen/dim_size_tab_icon"
        android:layout_marginStart="@dimen/dim_margin_default"
        android:layout_marginTop="@dimen/dim_margin_default"
        android:layout_marginBottom="@dimen/dim_margin_default"
        android:src="@drawable/ic_pie_chart_24px"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/overview_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/overview_text"
        style="@style/Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/string_label_tab_overview"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/accounts_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/overview_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/accounts_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:alpha="0.6"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_attach_money_24px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/account_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/overview_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_text"
        style="@style/Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/string_label_tab_account"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bills_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/accounts_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/bills_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:alpha="0.6"
        android:src="@drawable/ic_money_off_24px"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bills_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/account_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bills_text"
        style="@style/Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/string_label_tab_bills"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/budgets_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bills_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/budgets_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:alpha="0.6"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_bar_chart_24px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/budgets_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bills_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/budgets_text"
        style="@style/Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/string_label_tab_budgets"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settings_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/budgets_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/settings_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:alpha="0.6"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_settings_24px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/settings_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/budgets_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_text"
        style="@style/Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/string_label_tab_settings"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/settings_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dim_margin_default" />


</androidx.constraintlayout.widget.ConstraintLayout>